tests/machine/x/ocaml/avg_builtin.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/avg_builtin.ml", line 3, characters 16-68:
3 |   print_endline (List.fold_left (+) 0 [1;2;3] / List.length [1;2;3])
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         string


Context (around line 3):
   1 | 
   2 | let () =
   3 |   print_endline (List.fold_left (+) 0 [1;2;3] / List.length [1;2;3])
   4 | 
